<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".results"
    android:background="@drawable/results">

    <TextView
        android:id="@+id/resultTitle"
        style="@style/textLook"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:text="@string/resultTitle"
        android:background="@drawable/border"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="358dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/testCase"
                style="@style/textLook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultList" />
        </LinearLayout>
    </ScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="81dp" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:onClick="homePage"
        style="@style/buttonText"/>

</LinearLayout>