<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/help_picture"
    android:orientation="vertical"
    tools:context=".mainPage">

    <TextView
        android:id="@+id/titleHome"
        style="@style/textLook"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:text="@string/pantryHeader" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="65dp"
            android:layout_height="95dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/orderButton"
            style="@style/buttonText"
            android:onClick="orderPage"
            android:layout_width="244dp"
            android:layout_height="95dp"
            android:text="@string/orderForm" />

        <Space
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Space
            android:layout_width="65dp"
            android:layout_height="95dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/placeholder"
            style="@style/buttonText"
            android:layout_width="244dp"
            android:layout_height="95dp"
            android:text="@string/itemHelp"
            android:onClick="itemHelpPage"/>

        <Space
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Space
            android:layout_width="65dp"
            android:layout_height="95dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/aboutButton"
            style="@style/buttonText"
            android:layout_width="244dp"
            android:layout_height="95dp"
            android:text="@string/about"
            android:onClick="aboutPage"/>

        <Space
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="106dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Space
            android:layout_width="65dp"
            android:layout_height="95dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/contact"
            style="@style/buttonText"
            android:layout_width="244dp"
            android:layout_height="95dp"
            android:text="@string/contact"
            android:onClick="contactPage"/>

        <Space
            android:layout_width="75dp"
            android:layout_height="95dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>